# books_rag

./: .dockerignore  .env.example  .gitignore  Architecture.md  Dockerfile  README.md  book-rag-grafana-dashboard.json  docker-compose.yml  docker-entrypoint.sh  ingest.py  ingest_papers.py  promtail-config.yml  pyproject.toml  run_all.py  server.py  start_dev.py  uv
admin_app/: Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
alembic/: env.py
app/: cli.py  config.py  logging_config.py
data/: .gitignore
frontend/: index.html  nginx.conf  package-lock.json  package.json  vite.config.js
scripts/: check_corpus_context.py  claims_exporter.py  create_payload_indexes.py  cross_check_verification.py  dump_sqlite.py  export_verification_report.py  extract_isbns.py  migrate_qdrant.py  migrate_to_cloud.py  migration.py
tests/: test_admin_books_chats.py  test_admin_corpus_context.py  test_admin_delete_endpoints.py  test_admin_ingest.py  test_api.py  test_auth_ownership.py  test_bibliography_coercion.py  test_celery_tasks.py  test_check_corpus_context.py  test_chunk_papers.py  test_chunk_skip.py  test_citation.py  test_citations.py  test_convert_docx.py  test_convert_docx_standalone.py  test_corpus_api.py  test_corpus_selection.py  test_cross_check_claim.py  test_delete_book.py  test_delete_paper.py  test_document_claim.py  test_dump_sqlite.py  test_edition_filtering.py  test_editions.py  test_embed_skip.py  test_embed_skip_papers.py  test_export_verification.py  test_extract_claims.py  test_extract_isbns.py  test_seed_papers.py  (+19 more)
(+133 files in other folders)
